Cleanups of warnings and names of exported figures